--- a/BookItProj/src/components/BranchWorkingHours/BranchWorkingHours.css
+++ b/BookItProj/src/components/BranchWorkingHours/BranchWorkingHours.css
@@ -1,4 +1,18 @@
-.workingHours{
+.workingHours {
     display: flex;
     justify-content: space-between;
+}
+
+.timeInputs {
+    margin-top: 10px;
+    border-bottom: 0.5px solid rgb(184, 176, 176);
+
+}
+
+.checkBox {
+    margin-left: 55%;
+}
+
+.bottumBorder {
+    margin-top: 20px;
 }
