--- a/BookItProj/src/components/NewBranchDetails/NewBranchDetails.css
+++ b/BookItProj/src/components/NewBranchDetails/NewBranchDetails.css
@@ -3,13 +3,15 @@
   margin-top: 10px;
 }
 
-.containerr {
+/* .containerr {
   height: 100%;
+} */
+
+.textInput{
+  /* height: 500px; */
+  padding: 10px;
 }
 
-/* .textInput{
-  height: 30px;
-} */
 /* .serviceModal{
   margin-top: 20px !important;
   margin-left: 20px !important;
